Add reservation api documentation
