# swagger/v1/swagger.yaml
@@ -137,7 +137,7 @@ paths:
         schema:
           type: string
       responses:
-        '204':
+        '200':
           description: Yacht deleted
         '404':
           description: Yacht not found
@@ -145,25 +145,108 @@ paths:
             application/json:
               schema:
                 "$ref": "#/definitions/ErrorResponse"
+  "/v1/reservations":
+    get:
+      summary: Returns all reservations
+      tags:
+      - Reservations
+      security:
+      - bearerAuth: []
+      responses:
+        '200':
+          description: List of Reservations
+          content:
+            application/json:
+              schema:
+                type: array
+                reservations:
+                  type: object
+                  items:
+                    "$ref": "#/definitions/Reservation"
+    post:
+      summary: Create a new Reservation
+      tags:
+      - Reservations
+      security:
+      - bearerAuth: []
+      parameters: []
+      responses:
+        created:
+          description: Reservation created
+          content:
+            application/json:
+              schema:
+                type: object
+                items:
+                  "$ref": "#/definitions/Reservation"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                city:
+                  type: string
+                  example: Example city
+                start_date:
+                  type: datetime
+                  example: '2022-10-29'
+                days_number:
+                  type: integer
+                  example: 3
+                yacht_id:
+                  type: string
+                  example: '1'
+  "/v1/reservations/{id}":
+    get:
+      summary: Returns a reservation
+      tags:
+      - Reservations
+      security:
+      - bearerAuth: []
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: Reservation information
+          content:
+            application/json:
+              schema:
+                type: object
+                items:
+                  "$ref": "#/definitions/Reservation"
+        '404':
+          description: Reservation not found
+          content:
+            application/json:
+              schema:
+                "$ref": "#/definitions/ErrorResponse"
+    delete:
+      summary: Delete a reservation
+      tags:
+      - Reservations
+      security:
+      - bearerAuth: []
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: Reservation deleted
+        '404':
+          description: Reservation not found
+          content:
+            application/json:
+              schema:
+                "$ref": "#/definitions/ErrorResponse"
 definitions:
-  Yacht:
-    type: object
-    properties:
-      id:
-        type: integer
-        example: 1
-      name:
-        type: string
-        example: Yacht 1
-      description:
-        type: string
-        example: This is our first yacht
-      price:
-        type: decimal
-        example: 100.0
-      image_url:
-        type: string
-        example: http://localhost:3001/rails/active_storage/blobs/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBCdz09IiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--208a837d96cfc8b12c86088b4e4e0d0871fa6dce/yacht1.jpg
   Reservation:
     type: object
     properties:
@@ -185,6 +268,24 @@ definitions:
       user_id:
         type: integer
         example: 1
+  Yacht:
+    type: object
+    properties:
+      id:
+        type: integer
+        example: 1
+      name:
+        type: string
+        example: Yacht 1
+      description:
+        type: string
+        example: This is our first yacht
+      price:
+        type: decimal
+        example: 100.0
+      image_url:
+        type: string
+        example: http://localhost:3001/rails/active_storage/blobs/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBCdz09IiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--208a837d96cfc8b12c86088b4e4e0d0871fa6dce/yacht1.jpg
   User:
     type: object
     properties:
